--- a/src/locales/fr/messages.po
+++ b/src/locales/fr/messages.po
@@ -52,6 +52,58 @@ msgstr ""
 msgid "010111100001"
 msgstr "010111100001"
 
+#: src/pages/Summary/index.tsx:634
+msgid "1. Last Name, First Name, Middle Initial"
+msgstr "1. Nom, Prénom, Initiale du milieu"
+
+#: src/pages/Summary/index.tsx:724
+msgid "10. Physical Description"
+msgstr "10. Description physique"
+
+#: src/pages/Summary/index.tsx:740
+msgid "11. Bonds"
+msgstr "11. Liens"
+
+#: src/pages/Summary/index.tsx:767
+msgid "12. Motivations and Mental Disorders"
+msgstr "12. Motivations et troubles mentaux"
+
+#: src/pages/Summary/index.tsx:773
+msgid "13. Incidents of San Loss Without Going Insane"
+msgstr "13. Incidents de perte de SAN sans devenir fou"
+
+#: src/pages/Summary/index.tsx:638
+msgid "2. Profession (Rank if Applicable)"
+msgstr "2. Profession (Grade si applicable)"
+
+#: src/pages/Summary/index.tsx:644
+msgid "3. Employer"
+msgstr "3. Employeur"
+
+#: src/pages/Summary/index.tsx:648
+msgid "4. Nationality"
+msgstr "4. Nationalité"
+
+#: src/pages/Summary/index.tsx:654
+msgid "5. Sex"
+msgstr "5. Sexe"
+
+#: src/pages/Summary/index.tsx:658
+msgid "6. Age and D.O.B."
+msgstr "6. Âge et date de naissance"
+
+#: src/pages/Summary/index.tsx:664
+msgid "7. Education and Occupational History"
+msgstr "7. Formation et histoire professionnelle"
+
+#: src/pages/Summary/index.tsx:681
+msgid "8. Statistics"
+msgstr "8. Statistiques"
+
+#: src/pages/Summary/index.tsx:697
+msgid "9. Derived Attributes"
+msgstr "9. Attributs dérivés"
+
 #: src/pages/TheCrucible/Profession/components/ProfessionalGuidance.tsx:37
 msgid "A dedicated hobbyist; with a foreign language you can have rudimentary conversations."
 msgstr "Un amateur dévoué; avec une langue étrangère, vous pouvez avoir des conversations rudimentaires."
@@ -84,6 +136,11 @@ msgstr "Actif"
 #: src/types/characterTypes.ts:77
 msgid "Active Couch Potato"
 msgstr "Actif couch potato"
+
+#: src/pages/Summary/index.tsx:781
+#: src/pages/Summary/index.tsx:789
+msgid "adapted"
+msgstr "adapté"
 
 #: src/types/characterTypes.ts:621
 msgid "Add +10% to your Agent's Occult and +10% to any five skills other than Unnatural. This can bring no skill higher than 90%. Reduce your Agent's SAN by 5. Remove one Bond."
@@ -159,6 +216,10 @@ msgstr "Anthropologie"
 msgid "Appearance"
 msgstr "Apparence"
 
+#: src/pages/Summary/index.tsx:799
+msgid "Applicable Skill Sets"
+msgstr "Compétences applicables"
+
 #: src/pages/TheCrucible/Profession/components/ChooseProfession.tsx:143
 msgid "Apply preset skills and choose additional skills for your character."
 msgstr "Appliquer les compétences prédéfinies et choisir des compétences supplémentaires pour votre personnage."
@@ -220,6 +281,10 @@ msgstr "Croyances"
 msgid "Bland"
 msgstr "Plat"
 
+#: src/pages/Summary/index.tsx:753
+msgid "Bond description"
+msgstr "Description du lien"
+
 #: src/pages/TheCrucible/Bonds/components/BondInput.tsx:134
 msgid "Bond Detail"
 msgstr "Détails du lien"
@@ -280,6 +345,7 @@ msgid "Bonus Points Remaining"
 msgstr "Points bonus restants"
 
 #: src/utils/CharacterGenerator.ts:108
+#: src/pages/Summary/index.tsx:718
 msgid "Breaking Point"
 msgstr "Point de rupture"
 
@@ -325,6 +391,14 @@ msgstr "Chat-like"
 msgid "Charisma"
 msgstr "Charisme"
 
+#: src/pages/Summary/index.tsx:764
+msgid "Check a Bond’s box when projecting sanity damage"
+msgstr "Cocher la case d'un lien lorsque vous projettez des dégâts de SAN"
+
+#: src/pages/Summary/index.tsx:811
+msgid "Check a skill when you fail a skill check. After a session, add 1d4 to each checked skill and erase the check."
+msgstr "Cocher une compétence lorsque vous ratez un test de compétence. Après une session, ajoutez 1d4 à chaque compétence cochée et effacez le test."
+
 #. placeholder {0}: remainingSkillChoices > 0 ? remainingSkillChoices : ''
 #: src/pages/TheCrucible/Profession/components/ChooseSkills.tsx:160
 msgid "Choose {0} Additional Skills"
@@ -353,6 +427,10 @@ msgstr "Effacer les descriptions"
 #: src/pages/TheCrucible/Profession/components/ChooseSkills.tsx:165
 msgid "Clear Selected Skills"
 msgstr "Effacer les compétences sélectionnées"
+
+#: src/pages/TheCrucible/PersonalDetails/DamagedVeteranTemplates.tsx:74
+msgid "Clear Templates"
+msgstr "Effacer les modèles"
 
 #: src/types/characterTypes.ts:159
 msgid "Clumsy"
@@ -441,6 +519,10 @@ msgstr "Crédulité"
 msgid "Cunning, logic, and intuition"
 msgstr "Courage, logique, et intuition"
 
+#: src/pages/Summary/index.tsx:699
+msgid "Current"
+msgstr "Actuel"
+
 #: src/pages/TheCrucible/Profession/index.tsx:38
 msgid "Custom Professions"
 msgstr "Professions personnalisées"
@@ -449,7 +531,7 @@ msgstr "Professions personnalisées"
 msgid "Dabbler."
 msgstr "Quelqu'un qui essaie de tout faire."
 
-#: src/pages/TheCrucible/PersonalDetails/DamagedVeteranTemplates.tsx:62
+#: src/pages/TheCrucible/PersonalDetails/DamagedVeteranTemplates.tsx:64
 msgid "Damaged Veteran Templates"
 msgstr "Modèles de vétéran blessé"
 
@@ -507,6 +589,7 @@ msgid "Disguise"
 msgstr "Disguise"
 
 #: src/pages/TheCrucible/Statistics/components/StatDescriptors/StatDescriptors.tsx:125
+#: src/pages/Summary/index.tsx:684
 msgid "Distinguishing Features"
 msgstr "Caractéristiques distinctives"
 
@@ -562,6 +645,10 @@ msgstr "Entrez un sous-type"
 #: src/pages/TheCrucible/Bonds/components/BondGuidance.tsx:60
 msgid "Example"
 msgstr "Exemple"
+
+#: src/pages/Summary/index.tsx:820
+msgid "Export as PDF"
+msgstr "Exporter en PDF"
 
 #: src/types/characterTypes.ts:577
 msgid "Extreme Violence"
@@ -738,6 +825,10 @@ msgstr "Machines lourdes"
 msgid "Heavy Weapons"
 msgstr "Armes lourdes"
 
+#: src/pages/Summary/index.tsx:783
+msgid "Helplessness"
+msgstr "Inutilité"
+
 #: src/utils/Professions.ts:126
 msgid "Historian"
 msgstr "Historien"
@@ -747,6 +838,7 @@ msgid "History"
 msgstr "Histoire"
 
 #: src/utils/CharacterGenerator.ts:87
+#: src/pages/Summary/index.tsx:703
 msgid "Hit Points"
 msgstr "Points de vie"
 
@@ -883,6 +975,10 @@ msgstr "Loi"
 msgid "Lawyer"
 msgstr "Avocat"
 
+#: src/pages/Summary/index.tsx:769
+msgid "List character motivations and any mental disorders..."
+msgstr "Listez les motivations de votre personnage et ses troubles mentaux..."
+
 #: src/types/characterTypes.ts:430
 #: src/types/characterTypes.ts:1008
 msgid "LMGs I think"
@@ -912,6 +1008,10 @@ msgstr "De nombreux agents de Delta Green sont des officiers de la police fédé
 #: src/utils/Professions.ts:651
 msgid "Marine"
 msgstr "Marine"
+
+#: src/pages/Summary/index.tsx:700
+msgid "Max"
+msgstr "Maximum"
 
 #: src/utils/Professions.ts:494
 msgid "Media Specialist"
@@ -1070,6 +1170,10 @@ msgstr "Persévérant"
 msgid "Personal and physical appeal"
 msgstr "Appel personnel et physique"
 
+#: src/pages/Summary/index.tsx:629
+msgid "Personal Data"
+msgstr "Données personnelles"
+
 #: src/pages/TheCrucible/index.tsx:52
 #: src/pages/TheCrucible/PersonalDetails/PersonalDetailsGuidance.tsx:26
 #: src/pages/TheCrucible/PersonalDetails/PersonalDetailsGuidance.tsx:26
@@ -1188,6 +1292,10 @@ msgstr "Profession"
 msgid "Program Manager"
 msgstr "Directeur de programme"
 
+#: src/pages/Summary/index.tsx:735
+msgid "Psychological Data"
+msgstr "Données psychologiques"
+
 #: src/types/characterTypes.ts:1210
 msgid "Psychotherapy"
 msgstr "Psychanalyse"
@@ -1238,6 +1346,10 @@ msgstr "Réinitialiser les liens"
 msgid "Reset Bonus Points"
 msgstr "Réinitialiser les points bonus"
 
+#: src/pages/Summary/index.tsx:822
+msgid "Reset everything"
+msgstr "Réinitialiser tout"
+
 #: src/pages/TheCrucible/PersonalDetails/index.tsx:352
 msgid "Reset Personal Details"
 msgstr "Réinitialiser les détails personnels"
@@ -1287,6 +1399,7 @@ msgid "Sailor"
 msgstr "Marin"
 
 #: src/utils/CharacterGenerator.ts:101
+#: src/pages/Summary/index.tsx:713
 msgid "Sanity"
 msgstr "Sanité"
 
@@ -1301,6 +1414,11 @@ msgstr "Science (Physique théorique)"
 #: src/utils/Professions.ts:251
 msgid "Scientist"
 msgstr "Scientifique"
+
+#: src/pages/Summary/index.tsx:682
+#: src/pages/Summary/index.tsx:741
+msgid "Score"
+msgstr "Note"
 
 #: src/types/characterTypes.ts:1265
 msgid "Search"
@@ -1399,6 +1517,10 @@ msgstr "commence à"
 #: src/pages/TheCrucible/Profession/components/CustomSkillInput.tsx:199
 msgid "Starts at:"
 msgstr "Commence à:"
+
+#: src/pages/Summary/index.tsx:677
+msgid "Statistical Data"
+msgstr "Données statistiques"
 
 #: src/pages/TheCrucible/index.tsx:49
 msgid "Statistics"
@@ -1565,6 +1687,10 @@ msgstr "Utilisez ces prompts pour vous imprégner de votre personnage. Elles son
 msgid "Vigorous"
 msgstr "Vigorant"
 
+#: src/pages/Summary/index.tsx:775
+msgid "Violence"
+msgstr "Violence"
+
 #: src/pages/About/index.tsx:128
 msgid "Visit"
 msgstr "Visitez"
@@ -1616,6 +1742,14 @@ msgstr "Volonté"
 #: src/types/characterTypes.ts:545
 msgid "Will, spirit, and mental stability"
 msgstr "Volonté, esprit et stabilité mentale"
+
+#: src/pages/Summary/index.tsx:708
+msgid "Willpower"
+msgstr "Volonté"
+
+#: src/pages/Summary/index.tsx:683
+msgid "x5"
+msgstr "x5"
 
 #: src/utils/Professions.ts:255
 msgid "You expand human knowledge in a field such as biology, physics, or chemistry. When certain forms of knowledge cause insanity and death, it's easy to conclude that some hypotheses should not be tested."
